Update publish path in netlify.toml to current directory

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@ plugins = []
   [functions."*"]
 
 [build]
-publish = "/opt/build/repo/Pages"
+publish = "."
 publishOrigin = "config"
 
   [build.environment]
