Add Services and Vision pages, update Vercel rewrites for new routes
- Created services.html with a comprehensive services directory for Purbottar Vikash Parishad.
- Developed vision.html outlining the organization's vision and mission.
- Updated vercel.json to include rewrites for new pages: services and vision, along with existing routes for aboutus, contact, gallery, homepage, and reports.

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,34 @@
   "outputDirectory": ".",
   "rewrites": [
     {
+      "source": "/aboutus",
+      "destination": "/pages/aboutus.html"
+    },
+    {
+      "source": "/contact",
+      "destination": "/pages/contact.html"
+    },
+    {
+      "source": "/gallery",
+      "destination": "/pages/gallery.html"
+    },
+    {
+      "source": "/homepage",
+      "destination": "/pages/homepage.html"
+    },
+    {
+      "source": "/reports",
+      "destination": "/pages/reports.html"
+    },
+    {
+      "source": "/services",
+      "destination": "/pages/services.html"
+    },
+    {
+      "source": "/vision",
+      "destination": "/pages/vision.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
