--- a/netlify.toml
+++ b/netlify.toml
@@ -1,48 +1,26 @@
-headersOrigin = "config"
-redirectsOrigin = "config"
-plugins = []
-
-[functions]
-
-  [functions."*"]
-
 [build]
-publish = "."
-publishOrigin = "config"
+command = "npm run build"
+publish = "dist"
 
-  [build.environment]
-  JEKYLL_ENV = "deploy-preview"
-
-  [build.processing]
-
-    [build.processing.css]
-
-    [build.processing.html]
-
-    [build.processing.images]
-
-    [build.processing.js]
-
-  [build.services]
+[build.environment]
+NODE_VERSION = "18"
 
 [[headers]]
-for = "/*"
+for = "/index.html"
+[headers.values]
+Cache-Control = "public, max-age=0, must-revalidate"
+X-Frame-Options = "SAMEORIGIN"
+X-Content-Type-Options = "nosniff"
+X-XSS-Protection = "1; mode=block"
+Referrer-Policy = "strict-origin-when-cross-origin"
+Permissions-Policy = "geolocation=(), microphone=(), camera=()"
 
-  [headers.values]
-  X-Frame-Options = "SAMEORIGIN"
-  X-Content-Type-Options = "nosniff"
-  X-XSS-Protection = "1; mode=block"
-  Referrer-Policy = "strict-origin-when-cross-origin"
-  Permissions-Policy = "geolocation=(), microphone=(), camera=()"
+[[headers]]
+for = "/assets/*"
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
 
 [[redirects]]
 from = "/*"
 to = "/index.html"
 status = 200
-force = false
-
-  [redirects.query]
-
-  [redirects.conditions]
-
-  [redirects.headers]
