--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "scaling-barnacle",
   "version": "1.0.0",
-  "description": "A static website deployed on Vercel",
-  "main": "index.html",
+  "description": "React-based NGO website for Purbottar Vikash Parishad",
+  "type": "module",
   "scripts": {
-    "dev": "python3 -m http.server 8000",
-    "build": "echo 'Static site - no build step needed'",
-    "start": "python3 -m http.server 8000"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "NGO",
+    "React",
+    "Vite"
+  ],
+  "author": "Purbottar Vikash Parishad",
+  "license": "ISC",
+  "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/postcss": "^4.1.18",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.4",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
+  }
 }
